# dagger-movie-recommender

./: debug-pkg.py  pyproject.toml
.github/workflows/: dagger_ci.yaml  gh_actions_ci.yaml  gh_actions_debug.yaml
ci/: test_base.py
tests/: conftest.py
