[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topn"
version = "0.0.1"
description = "TopN Recommender System"
authors= []
dependencies = [
  "pandas >= 2.2.0",
  "scikit-learn >= 1.4.0",
]

[tool.setuptools]
packages = ["topn"]

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0"
]
